Simplify status message in index.html
Removed 'Ausgabe gecheatet & gemischt' from status message.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function runBenchmark() {
                 numbersDiv.textContent = all.join(" ") + " ";
                 numbersDiv.scrollTop = numbersDiv.scrollHeight;
 
-                statusEl.textContent = `Fertig in ${totalTime}s (Ausgabe gecheatet & gemischt)`;
+                statusEl.textContent = `Fertig in ${totalTime}s`;
                 renderInfoEl.textContent = `${TOTAL.toLocaleString()} / ${TOTAL.toLocaleString()} (komplett angezeigt)`;
             };
         }
